--- a/MyBill/App.config
+++ b/MyBill/App.config
@@ -5,12 +5,12 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 	<appSettings>
-		<add key="mydbname" value="Server=BABUGOMATHY;Database=mybill;user id=sa;password=babu;" />
+		<add key="mydbname" value="Server=(localhost);Database=mybill;user id=sa;password=babu;" />
 		<add key="mydbprovider" value="System.Data.SqlClient" />
-		<add key="Reportpath" value="F:\Meyyalingam\MyBill\MyBill\Reports\" />
+		<add key="Reportpath" value="F:\Invoice\MyBill\MyBill\Reports\" />
 	</appSettings>
 	<connectionStrings>
-		<add name="mydbname" connectionString="Server=BABUGOMATHY;Database=mybill;user id=sa;password=babu;" providerName="System.Data.SqlClient" />
+		<add name="mydbname" connectionString="Server=(localhost);Database=mybill;user id=sa;password=babu;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 	<startup useLegacyV2RuntimeActivationPolicy="true">
