--- a/MyBill/MyBill.csproj
+++ b/MyBill/MyBill.csproj
@@ -184,7 +184,6 @@
     <Compile Include="Products.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="ViewModel\CompanyInfo.cs" />
     <Compile Include="ViewModel\getPartyList_Result.cs" />
     <Compile Include="ViewModel\ProductDetail.cs" />
@@ -285,19 +284,7 @@
     <Content Include="Images\company-name-vector-logo1.jpg" />
     <Content Include="Images\logo.png" />
     <Content Include="Images\sample-company-logo.jpg" />
-    <Content Include="SqlServerTypes\readme.htm" />
-    <Content Include="SqlServerTypes\x64\msvcr100.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SqlServerTypes\x64\SqlServerSpatial120.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SqlServerTypes\x86\msvcr100.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SqlServerTypes\x86\SqlServerSpatial120.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="SQL Script\MyBillScript.sql" />
     <Content Include="VB.ico" />
   </ItemGroup>
   <ItemGroup>
